# src/routes/routes.ts
@@ -11,8 +11,11 @@ import { UserController } from './../controllers/usercontroller';
 import { TestController } from './../controllers/test';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { ReportController } from './../controllers/reportcontroller';
+import { expressAuthentication } from './../middleware/authentication';
+// @ts-ignore - no great way to install types from subpackage
 import type { Request as ExRequest, Response as ExResponse, RequestHandler, Router } from 'express';
 
+const expressAuthenticationRecasted = expressAuthentication as (req: ExRequest, securityName: string, scopes?: string[], res?: ExResponse) => Promise<any>;
 
 
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
@@ -38,6 +41,7 @@ export function RegisterRoutes(app: Router) {
         const argsViolationController_getAllViolations: Record<string, TsoaRoute.ParameterSchema> = {
         };
         app.get('/Violation/allviolations',
+            authenticateMiddleware([{"jwt":["Officer","Admin"]}]),
             ...(fetchMiddlewares<RequestHandler>(ViolationController)),
             ...(fetchMiddlewares<RequestHandler>(ViolationController.prototype.getAllViolations)),
 
@@ -68,6 +72,7 @@ export function RegisterRoutes(app: Router) {
                 request: {"in":"body","name":"request","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"id":{"dataType":"double","required":true}}},
         };
         app.post('/Violation/violationById',
+            authenticateMiddleware([{"jwt":["Officer","Admin"]}]),
             ...(fetchMiddlewares<RequestHandler>(ViolationController)),
             ...(fetchMiddlewares<RequestHandler>(ViolationController.prototype.getViolationsById)),
 
@@ -98,6 +103,7 @@ export function RegisterRoutes(app: Router) {
                 request: {"in":"body","name":"request","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"location":{"dataType":"string"},"type":{"dataType":"string"},"plate":{"dataType":"string"},"date":{"dataType":"datetime"},"id":{"dataType":"double","required":true}}},
         };
         app.put('/Violation/updateViolationById',
+            authenticateMiddleware([{"jwt":["Admin"]}]),
             ...(fetchMiddlewares<RequestHandler>(ViolationController)),
             ...(fetchMiddlewares<RequestHandler>(ViolationController.prototype.updateUserById)),
 
@@ -128,6 +134,7 @@ export function RegisterRoutes(app: Router) {
                 request: {"in":"body","name":"request","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"id":{"dataType":"double","required":true}}},
         };
         app.delete('/Violation/deleteViolation',
+            authenticateMiddleware([{"jwt":["Admin"]}]),
             ...(fetchMiddlewares<RequestHandler>(ViolationController)),
             ...(fetchMiddlewares<RequestHandler>(ViolationController.prototype.deleteViolation)),
 
@@ -158,6 +165,7 @@ export function RegisterRoutes(app: Router) {
                 request: {"in":"body","name":"request","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"province":{"dataType":"string","required":true},"imageUrl":{"dataType":"array","array":{"dataType":"string"},"required":true},"location":{"dataType":"string","required":true},"type":{"dataType":"string","required":true},"plate":{"dataType":"string","required":true},"date":{"dataType":"datetime","required":true}}},
         };
         app.post('/Violation/addNewViolation',
+            authenticateMiddleware([{"jwt":["Officer","Admin"]}]),
             ...(fetchMiddlewares<RequestHandler>(ViolationController)),
             ...(fetchMiddlewares<RequestHandler>(ViolationController.prototype.addNewViolation)),
 
@@ -188,6 +196,7 @@ export function RegisterRoutes(app: Router) {
                 violationId: {"in":"query","name":"violationId","required":true,"dataType":"double"},
         };
         app.get('/Violation/getTicketFromViolation',
+            authenticateMiddleware([{"jwt":["Officer","Admin"]}]),
             ...(fetchMiddlewares<RequestHandler>(ViolationController)),
             ...(fetchMiddlewares<RequestHandler>(ViolationController.prototype.getTicketFromViolation)),
 
@@ -217,6 +226,7 @@ export function RegisterRoutes(app: Router) {
         const argsUserController_getAllUsers: Record<string, TsoaRoute.ParameterSchema> = {
         };
         app.get('/User/allusers',
+            authenticateMiddleware([{"jwt":["Admin"]}]),
             ...(fetchMiddlewares<RequestHandler>(UserController)),
             ...(fetchMiddlewares<RequestHandler>(UserController.prototype.getAllUsers)),
 
@@ -247,6 +257,7 @@ export function RegisterRoutes(app: Router) {
                 request: {"in":"body","name":"request","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"id":{"dataType":"double","required":true}}},
         };
         app.post('/User/userById',
+            authenticateMiddleware([{"jwt":["Admin"]}]),
             ...(fetchMiddlewares<RequestHandler>(UserController)),
             ...(fetchMiddlewares<RequestHandler>(UserController.prototype.getUserById)),
 
@@ -307,6 +318,7 @@ export function RegisterRoutes(app: Router) {
                 request: {"in":"body","name":"request","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"role":{"dataType":"string","required":true},"password":{"dataType":"string","required":true},"username":{"dataType":"string","required":true},"name":{"dataType":"string","required":true}}},
         };
         app.post('/User/createUser',
+            authenticateMiddleware([{"jwt":["Admin"]}]),
             ...(fetchMiddlewares<RequestHandler>(UserController)),
             ...(fetchMiddlewares<RequestHandler>(UserController.prototype.createUser)),
 
@@ -337,6 +349,7 @@ export function RegisterRoutes(app: Router) {
                 request: {"in":"body","name":"request","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"role":{"dataType":"string"},"password":{"dataType":"string"},"username":{"dataType":"string"},"name":{"dataType":"string"},"id":{"dataType":"double","required":true}}},
         };
         app.put('/User/updateUserById',
+            authenticateMiddleware([{"jwt":["Admin"]}]),
             ...(fetchMiddlewares<RequestHandler>(UserController)),
             ...(fetchMiddlewares<RequestHandler>(UserController.prototype.updateUserById)),
 
@@ -367,6 +380,7 @@ export function RegisterRoutes(app: Router) {
                 request: {"in":"body","name":"request","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"userId":{"dataType":"double","required":true}}},
         };
         app.delete('/User/deleteUser',
+            authenticateMiddleware([{"jwt":["Admin"]}]),
             ...(fetchMiddlewares<RequestHandler>(UserController)),
             ...(fetchMiddlewares<RequestHandler>(UserController.prototype.deleteUser)),
 
@@ -574,6 +588,76 @@ export function RegisterRoutes(app: Router) {
 
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
+
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+    function authenticateMiddleware(security: TsoaRoute.Security[] = []) {
+        return async function runAuthenticationMiddleware(request: any, response: any, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            // keep track of failed auth attempts so we can hand back the most
+            // recent one.  This behavior was previously existing so preserving it
+            // here
+            const failedAttempts: any[] = [];
+            const pushAndRethrow = (error: any) => {
+                failedAttempts.push(error);
+                throw error;
+            };
+
+            const secMethodOrPromises: Promise<any>[] = [];
+            for (const secMethod of security) {
+                if (Object.keys(secMethod).length > 1) {
+                    const secMethodAndPromises: Promise<any>[] = [];
+
+                    for (const name in secMethod) {
+                        secMethodAndPromises.push(
+                            expressAuthenticationRecasted(request, name, secMethod[name], response)
+                                .catch(pushAndRethrow)
+                        );
+                    }
+
+                    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+                    secMethodOrPromises.push(Promise.all(secMethodAndPromises)
+                        .then(users => { return users[0]; }));
+                } else {
+                    for (const name in secMethod) {
+                        secMethodOrPromises.push(
+                            expressAuthenticationRecasted(request, name, secMethod[name], response)
+                                .catch(pushAndRethrow)
+                        );
+                    }
+                }
+            }
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            try {
+                request['user'] = await Promise.any(secMethodOrPromises);
+
+                // Response was sent in middleware, abort
+                if (response.writableEnded) {
+                    return;
+                }
+
+                next();
+            }
+            catch(err) {
+                // Show most recent error as response
+                const error = failedAttempts.pop();
+                error.status = error.status || 401;
+
+                // Response was sent in middleware, abort
+                if (response.writableEnded) {
+                    return;
+                }
+                next(error);
+            }
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        }
+    }
 
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 }
